<resources>
    <string name="app_name">Beauty Organizer</string>
    <string name="primer">Primer</string>
    <string name="foundation">Foundation</string>
    <string name="concealer">Concealer</string>
    <string name="setting_powder">Setting Powder</string>
    <string name="blush">Blush</string>
    <string name="contour">Contour</string>
    <string name="highlighter">Highlighter</string>
    <string name="brows">Brows</string>
    <string name="eyeshadow">Eyeshadow</string>
    <string name="eyeliner">Eyeliner</string>
    <string name="mascara">Mascara</string>
    <string name="lipstick">Lipstick</string>
    <string name="lipgloss">Lip gloss</string>
    <string name="lipliner">Lip liner</string>
    <string name="lipbalm_oil">Lip balm / oil</string>
    <string name="accessories">Accessories</string>
    <string name="palettes">Multi Palette</string>
    <string name="finishing_spray">Finishing spray</string>
    <string name="addBtn">Add</string>
    <string name="removeBtn">Remove</string>
    <string name="viewBtn">View</string>
    <string name="cleanser">Cleanser</string>
    <string name="exfoliators">Exfoliators</string>
    <string name="nail_care">Nail Care</string>
    <string name="face_wipes">Face Wipes</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="lip_scrubs">Lip Scrubs</string>
    <string name="eye_under_care">Eye Under Care</string>
    <string name="oils">Oils</string>
    <string name="serums">Serums</string>
    <string name="essences">Essences</string>
    <string name="toners">Toners</string>
    <string name="sheet_masks">Sheet Masks</string>
    <string name="wash_off_masks">Wash-off Masks</string>
    <string name="beauty_organizer">Beauty Organizer</string>
    <string name="make_up">Make Up</string>
    <string name="skin_care">Skin Care</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="organize">Organize</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="exp_date">EXP date</string>
    <string name="body_care">Body Care</string>
</resources>