<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Add_Product">

    <EditText
        android:id="@+id/et_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/et_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_name"
        android:minHeight="48dp"
        android:textColor="@color/text"
        tools:ignore="TextContrastCheck"/>

    <TextView
        android:id="@+id/tv_exp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="Expiration Date"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="OpenDatePicker"
        style="?android:spinnerStyle"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:background="@color/buttons_1"
        android:text="@string/addBtn"
        android:textColor="@color/text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/ll_brands_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</LinearLayout>